# ofds_consolidation_tool

./: .flake8  .gitignore  .tool-versions  README.md  __init__.py  comparisons.py  consolidation.py  dev_requirements.in  dev_requirements.txt  gui.py  gui.ui  gui_style.py  gui_style.ui  helpers.py  metadata.txt  models.py  ofds.py  plugin.py  pyproject.toml  resources.py  tool.py
.github/workflows/: pages.yml  release.yml
docs/: _config.yml  development.md  howto.md  index.md
docs/_includes/: toc.html
docs/_layouts/: default.html
scripts/: build-package.sh  compile-gui.sh  start-qgis.sh
templates/: .metadata.txt.j2
tests/: test_consolidation.py  test_nodes_consolidation.py
tests/test_data/: network_a.json  network_b.json  nodes_a.geojson  nodes_b.geojson  spans_a.geojson  spans_b.geojson
tool/: control.py  helpers.py  state.py  style.py  tool.py  view.py  view_file_dialog.py  view_warningbox.py
tool/_lib/jellyfish/: _jellyfish.py
tool/model/: comparison.py  consolidated_network.py  consolidation.py  exceptions.py  network.py  properties.py  qgis.py  qgis_utils.py  settings.py
tool/stylesheets/: networkProviderNodesMultiplePlainOutput.qml  networkProviderSpansMultiplePlainOutput.qml
tool/viewmodel/: state.py
